Sam's Final Code